--- a/packages/@mantine/schedule/src/components/ResourcesMonthView/ResourcesMonthView.module.css
+++ b/packages/@mantine/schedule/src/components/ResourcesMonthView/ResourcesMonthView.module.css
@@ -22,10 +22,10 @@
 
 .resourcesMonthViewScrollArea {
   :where([data-mantine-scrollbar]) {
-    z-index: 6;
+    z-index: 20;
   }
 
-  :where(:global(.mantine-ScrollArea-viewport)) {
+  :where([data-scrollarea-viewport]) {
     overscroll-behavior-x: none;
   }
 }
